--- a/index.html
+++ b/index.html
@@ -30,19 +30,23 @@
 			</div>
 		</section>
 		<section id="projets">
-			<h2>Mes Projets</h2>
-			<div class="bloc">
-					<!-- Projet1_countdown -->
-				<h3>Projet Countdown</h3>
-				<img id="countdown" src="images/down.svg">
-				<p id="hello">Hello !</p>
+			<div class="titreProjets">
+				<h2>Mes Projets</h2>
 			</div>
-			<div class="bloc">
-				<!-- Projet2_blog?_-->
-				<h3>Projet Blog</h3>
-				<img id="blog" src="images/down.svg">
-				<p id="here">Je suis là !</p>
-			 </div>
+			<div class="containerProjets">            
+				<div class="bloc">
+					<h3>Projet Countdown</h3>
+					<img id="countdown" src="images/down.svg">
+					<p id="firstprojet">Création d'un countdown en html, css & javascript</p>
+					<!-- <p class="lien">Lien</p> -->
+				</div>
+				<div class="bloc">
+					<h3>Projet Blog</h3>
+					<img id="blog" src="images/down.svg">
+					<p id="projetblog">Projet de groupe sur la creation d'un blog frontend & backend</p>
+					<!-- <p class="lien">Lien</p> 				tester et ajouter lien -->
+			 	</div>
+			</div>
 		</section>
 		<footer>
 			<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. I</p> -->
