--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="icon" type="image/png" href="images/media/github.svg" /> <!-- Pouvoir mettre une icon dans l'onglet-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="scripts/index.js"></script>
+		<script src="scripts/changeImg.js"></script>
 	</head>
 	<body>
 		<header>
